syntax = "proto3";

package order;

option go_package = "proto/orderpb";

service OrderService {
  rpc CreateOrder(Order) returns (OrderResponse);
  rpc GetOrderById(OrderID) returns (Order);
  rpc ListOrders(Empty) returns (OrderList);
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  float total_price = 4;
  string status = 5;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderID {
  string id = 1;
}

message OrderResponse {
  string message = 1;
}

message OrderList {
  repeated Order orders = 1;
}

message Empty {}
